ajout d'une première image

--- a/observation.html
+++ b/observation.html
@@ -49,6 +49,9 @@
                 Phasellus vulputate est leo. Praesent rhoncus volutpat interdum.
                 Etiam at enim feugiat, ultricies leo eget, tempus metus. 
             </p>
+            <picture>
+                <source media=("max-width: 1920px") srcset="image-telescope.jpg"
+            </picture>                                                   
 
         <h2>La carte du ciel</h2>
 
