ajout d'une deuxième image

--- a/observation.html
+++ b/observation.html
@@ -13,6 +13,7 @@
         <h1></h1>
         <nav>
             <ul class="nav-menu">
+                <li>Accueil <a href="index.html"></a></li>
                 <li>Actus spatiales <a href="actu-spatiales.html"></a></li>
                 <li>Dates historiques <a href="dates-historiques.html"></a></li>
                 <li>Un billet pour l'espace <a href="un-billet-pour-l-espace.html"></a></li>
@@ -49,8 +50,11 @@
                 Phasellus vulputate est leo. Praesent rhoncus volutpat interdum.
                 Etiam at enim feugiat, ultricies leo eget, tempus metus. 
             </p>
+
             <picture>
-                <source media=("max-width: 1920px") srcset="image-telescope.jpg"
+                <source media=("max-width: 1920px") srcset="image-telescope.jpg"/>
+                <source media=("max-width: 1920px") srcset="image-telescope.jpg"/>            
+                <source media=("max-width: 1920px") srcset="image-telescope.jpg"/>           
             </picture>                                                   
 
         <h2>La carte du ciel</h2>
@@ -66,8 +70,14 @@
                 Duis scelerisque dapibus velit vel volutpat. 
             </p>
 
-    </article>
 
+            <picture>
+                <source media=("max-width: 1920px") srcset="image-telescope.jpg"/>
+                <source media=("max-width: 1920px") srcset="image-telescope.jpg"/>            
+                <source media=("max-width: 1920px") srcset="image-telescope.jpg"/>           
+            </picture> 
+            
+    </article>
 
 </body>
 
