image telecope mise en place

--- a/observation.html
+++ b/observation.html
@@ -52,7 +52,7 @@
             </p>
 
             <picture>
-                <source media=("max-width: 1920px") srcset="image-telescope.jpg"/>
+                <source media=("max-width: 1920px") srcset="telescope_1.webp"/>
                 <source media=("max-width: 1920px") srcset="image-telescope.jpg"/>            
                 <source media=("max-width: 1920px") srcset="image-telescope.jpg"/>           
             </picture>                                                   
@@ -76,7 +76,7 @@
                 <source media=("max-width: 1920px") srcset="image-telescope.jpg"/>            
                 <source media=("max-width: 1920px") srcset="image-telescope.jpg"/>           
             </picture> 
-            
+
     </article>
 
 </body>
