--- a/observation.html
+++ b/observation.html
@@ -5,6 +5,7 @@
 	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
     <meta name="viewport" content="width = device-width" />
     <link rel= "stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="obs-style.css"/> 
 </head>
 
 <body>
@@ -24,11 +25,11 @@
     </header>
 
 
-    <article>
-
+    <article class="obs">
+        <section class="contenu">
         <h1>Comment observer les étoiles</h1>
 
-            <p>
+            <p class="texte">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                 Sed fermentum sodales nibh at fringilla. Donec vulputate luctus turpis nec semper. 
                 Fusce ut sagittis arcu, quis imperdiet orci. 
@@ -42,7 +43,7 @@
         
         <h2>La lunette astronomique</h2>
 
-            <p>
+            <p class="texte">
                 Ut vehicula enim sem, vitae ornare mi dignissim ut. Sed ornare in ante ac rhoncus. Morbi suscipit ipsum quis magna cursus, eu finibus arcu suscipit. 
                 Aliquam malesuada nibh at nisi ornare, et venenatis arcu sollicitudin. 
                 Nam nec tellus porttitor, volutpat neque a, varius tellus. Proin varius leo libero, et sodales elit rutrum et. Donec congue quam vitae ultricies consequat. 
@@ -59,7 +60,7 @@
 
         <h2>La carte du ciel</h2>
 
-            <p>
+            <p class="texte">
                 In sollicitudin turpis et commodo condimentum. Proin aliquam dapibus accumsan. Aenean vulputate volutpat vestibulum. Praesent commodo at lacus in gravida. Cras euismod volutpat tincidunt. 
                 Proin nibh lectus, porta sit amet consequat at, ultrices et ipsum. Quisque accumsan, ex eget efficitur elementum, enim ipsum dictum felis, et efficitur ante ante sit amet quam. 
                 Integer efficitur velit metus, in facilisis ligula viverra quis. 
@@ -76,7 +77,7 @@
                 <source media=("max-width: 720px") srcset="image-telescope.jpg"/>            
                 <source media=("max-width: 400px") srcset="image-telescope.jpg"/>           
             </picture> 
-
+        </section>
     </article>
 
 </body>
