css modif titre, ajut footer

--- a/dates-historiques/dates-historique.html
+++ b/dates-historiques/dates-historique.html
@@ -1,36 +1,63 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Les dates historiques | titre site</title>
     <link rel="stylesheet" href="dates-style.css"/> 
 </head>
+
 <body>
+
     <header>
-
-
-
+        <h1>nom du site</h1>
+        <nav>
+            <ul class="nav-menu">
+                <li>Accueil <a href="index.html"></a></li>
+                <li>Actus spatiales <a href="actu-spatiales.html"></a></li>
+                <li>Dates historiques <a href="dates-historiques.html"></a></li>
+                <li>Un billet pour l'espace <a href="un-billet-pour-l-espace.html"></a></li>
+                <li>Observer l'espace <a href="observer-l-espace.html"></a></li>
+                <li>Galerie <a href="galerie.html"></a></li>
+            </ul>
+        </nav>
     </header>
+
 
     <h1>Les dates historiques</h1>
 
     <article class="obs">
+
         <section class="contenu"> 
+
             <p class="texte">
                 XXXXXXXXXXXXXXXXXXXXXXXXXXX
             </p>
+
             <p class="texte">
                 XXXXXXXXXXXXXXXXXXXXXXXXXXX
             </p>
+
             <p class="texte">
                 XXXXXXXXXXXXXXXXXXXXXXXXXXX
             </p>
+
             <p class="texte">
                 XXXXXXXXXXXXXXXXXXXXXXXXXXX
             </p>
+
         </section>
 
     </article>
+
+    <footer>
+        <p>truc</p>
+        <p>machin</p>
+        <p>bidule</p>
+    </footer>
+    
 </body>
+
 </html>
