--- a/observation/observation.html
+++ b/observation/observation.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <html>
 
 <head>
@@ -6,6 +8,12 @@
     <meta name="viewport" content="width = device-width" />
     <link rel= "stylesheet" href="style.css"/>
     <link rel="stylesheet" href="obs-style.css"/> 
+    <script>
+        li = document.querySelector("li");       
+        li.addEventListener("hover", function couleur(){
+            li.style.color = "yellow";
+        })
+    </script>
 </head>
 
 <body>
@@ -86,7 +94,9 @@
 
     <footer>
         <p>un truc</p>
-
+        <p>bidule</p>
+        <p>machin</p>
+        <p>chouette</p>
     </footer>
 
 </body>
