--- a/observation.html
+++ b/observation.html
@@ -5,7 +5,8 @@
 	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
     <meta name="viewport" content="width = device-width" />
     <link rel= "stylesheet" href="style.css"/>
-    <link rel="stylesheet" href="obs-style.css"/> 
+    <link rel="stylesheet" href="obs-style.css"/>
+    <link rel= "stylesheet" href="news.css"/> 
 </head>
 
 <body>
